@@ -307,4 +307,5 @@ public class LearnedSignalPanel extends RMTablePanel< LearnedSignal >
   
   private JButton convertToUpgradeButton = null;
   private JButton timingSummaryButton = null;
+  
 }
